[package]
authors = ["EFanZh <efanzh@gmail.com>"]
edition = "2021"
name = "progress-tracker"
version = "0.1.0"

[dependencies]
chrono = "*"
git2 = "*"
num = "*"
plotters = "*"
reqwest = {version = "*", features = ["blocking", "json"]}
serde = {version = "*", features = ["derive"]}

[dev-dependencies]
serde_json = "*"
