[package]
authors = ["EFanZh <efanzh@gmail.com>"]
edition = "2024"
name = "progress-tracker"
version = "0.1.0"

[lints]
workspace = true

[dependencies]
chrono = "*"
git2 = "*"
http = "*"
num = "*"
plotters = "*"
reqwest = { version = "*", features = ["blocking", "json"] }
serde = { version = "*", features = ["derive"] }

[dev-dependencies]
serde_json = "*"
